tdf#123355 DOCX import: fix cell range ABOVE, BELOW,

LEFT and RIGHT by converting them to Writer cell ranges.

Note: these ranges start at the first numerical cell
and after that, end at the first empty cell or cell with
text content.

Change-Id: I906f27ecccaa8ded5460cd861ef8808000722860